# actix_rust_surreal

./: Cargo.toml
src/: db.rs  error.rs  main.rs  models.rs
src/db/: database.rs  transaction_data_trait.rs  user_data_trait.rs
src/error/: user_error.rs
src/models/: transaction.rs  user.rs
