[package]
name = "actix_binance_surreal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
validator = { version = "0.18.1" , features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.82"
derive_more = { version = "1.0", features = ["full"] }
json = "0.12.4"
surrealdb = "1.5.4"
uuid = "1.10.0"
reqwest = "0.11.27"
serde_json = "1.0.128"
